# seahorse-black

./: CMakeLists.txt  README.md  build.sh  licence.txt  run.sh
include/: sb_file.h  shader.h  sprite.h  window.h
include/glad/: glad.h
resources/: fragment.glsl  vertex.glsl
src/: glad.c  main.cpp  sb_file.cpp  shader.cpp  sprite.cpp  window.cpp
